--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-app.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-functions.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase-storage.js"></script>
+
 </head>
 <body>
 
