--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   </script>
   <script>
     document.getElementById('upload').addEventListener('click', ()=>{
+      console.log('clicked!!');
+      
         var files = document.getElementById('avatar').files;
         var image = files[0];
 
