--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <label for="avatar">ファイル選択</label>
   <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
   <button id="upload">送信</button><br><br><br>
-  <div id="imgUpload"></div>
+  <img id="imgUpload">
 
   <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
   <script>
